@@ -1,6 +1,10 @@
 Change Notes
 =============
 
+2009-07-06 jbornema
+	- Added DimensionElementSelector.showDimensionTitle property that adds dimension
+	  titel when rendering
+
 2009-06-15	FLI
 	- Added AbstractCubeDataProvider for easier subclassing
 	- Added UserDataObject property to DimensinoNavigationProvider
